syntax = "proto3";

package db;

option go_package = "./proto;db";

message GetUserRequest {
  string auth0_id = 1;
  string email = 2;
}

message GetUserResponse {
  bool success = 1;
  string message = 2;
}

message UploadVideoRequest {
  string bucket = 1;
  string object_key = 2;
  string exercise_name = 3;
  string auth0_id = 4;
}

message UploadVideoResponse {
  bool success = 1;
  string message = 2;
  int64 video_id = 3;
}

message GetUserVideosByExerciseRequest {
  string auth0_id = 1;
  string exercise_name = 2;
}

message VideoInfo {
  string bucket = 1;
  string object_key = 2;
  string exercise_name = 3;
  string auth0_id = 4;
  string created_at = 5;
  int64 id = 6;
}

message VideoAnalysisRequest {
  int64 video_id = 1;
  string type = 2;
  string bucket = 3;
  string object_key = 4;
}

message SaveAnalysisResponse {
  bool success = 1;
  string message = 2;
}

message GetUserVideosByExerciseResponse {
  repeated VideoInfo videos = 1;
  bool success = 2;
  string message = 3;
}

service DBService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc SaveUploadedVideo(UploadVideoRequest) returns (UploadVideoResponse);
  rpc GetUserVideosByExercise(GetUserVideosByExerciseRequest) returns (GetUserVideosByExerciseResponse);
  rpc SaveAnalysis(VideoAnalysisRequest) returns (SaveAnalysisResponse);
}
